--- a/src/GosuArena/GosuArena/Content/Bot/Edit.less
+++ b/src/GosuArena/GosuArena/Content/Bot/Edit.less
@@ -8,11 +8,69 @@ label[for=Script] {
 
 textarea {
     display: block;
-    width: 100%;
+    /*width: 100%;
     min-height: 600px;
+    height: 90%;*/
 }
 
 form {
     margin: 0;
     padding: 0;
+}
+
+html, body, div.container {
+    height: 100%;
+}
+
+@content-top-margin: 70px;
+
+body {
+    div.container {
+        position: relative;
+    }
+    section {
+        position: absolute;
+        top: 50px;
+        bottom: 0;
+        width: 100%;
+        pointer-events: none;
+    }
+}
+
+form#script-editor-form {
+    position: absolute;
+    top: @content-top-margin;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    fieldset {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        textarea {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 70px;
+        }
+
+        button {
+            position: absolute;
+            bottom: 20px;
+            right: 0;
+        }
+    }
+    
+}
+
+#match-setup {
+    position: absolute;
+    right: 0;
+    top: @content-top-margin;
+    bottom: 0;
 }
