--- a/src/GosuArena/GosuArena/Content/Match/Setup.less
+++ b/src/GosuArena/GosuArena/Content/Match/Setup.less
@@ -20,6 +20,10 @@ ul#bots {
             background-color: #dff0d8;
         }
     }
+
+    li.preselected-bot {
+        display: none;
+    }
 }
 
 #play-button {
