Added jslint support to the CodeMirror editor

--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -7,11 +7,14 @@
 @section styles {
     <link rel="stylesheet" href="@Url.Content("~/Content/Bot/Edit.less")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/codemirror-3.20/lib/codemirror.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/codemirror-3.20/addon/lint/lint.css")" />
 }
 
 @section scripts {
+    <script type="text/javascript" src="@Url.Content("~/Content/codemirror-3.20/lib/jshint.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Content/codemirror-3.20/lib/codemirror-compressed.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Bot/Edit.js")"></script>
+
 }
 
 @Html.ValidationSummary(true, "The bot could not be created")
