Added matching parens and match highlighting

--- a/src/GosuArena/GosuArena/Content/Bot/Edit.less
+++ b/src/GosuArena/GosuArena/Content/Bot/Edit.less
@@ -77,6 +77,15 @@ form#script-editor-form {
             overflow-y: hidden;
         }
 
+        .CodeMirror-matchingbracket {
+            color: black;
+            background-color: #ffd800;
+        }
+
+        .cm-matchhighlight {
+	        background-color: #fff9ff;
+        }
+
         button {
             position: absolute;
             bottom: 20px;
