--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
         <div class="container">
             <header>
-                <h1><a href="@Url.Action("Index", "Match")">Gosu Arena</a></h1>
+                <h1><a href="@Url.Action("Index", "Match")">Gosu Bot Arena</a></h1>
             </header>
         
             <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery-2.0.0.js")"> </script>
