Changed the process of supplying names to the bots being registered to avoid duplication with user having to specify the name again in the script

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -55,10 +55,10 @@
 @foreach (var bot in Model)
 {
     <script type="text/javascript">
-                // @bot.Name.ToUpper()
-                // A few lines of code have been added to the bot definition, to make it
-                // play nice with the framework. The code written by the user can be seen a few lines below
-        gosuArena.ready(function() {
+        // @bot.Name.ToUpper()
+        // A few lines of code have been added to the bot definition, to make it
+        // play nice with the framework. The code written by the user can be seen a few lines below
+        gosuArena.initiateBotRegistration("@bot.Name", function() {
             // Redefine globals
             var window = {};
             var document = {};
