--- a/src/GosuArena/GosuArena/Content/GosuArena.less
+++ b/src/GosuArena/GosuArena/Content/GosuArena.less
@@ -124,6 +124,9 @@ form {
     .validation-summary-errors {
         margin-left: 15px;
     }
+
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .alert {
