--- a/src/GosuArena/GosuArena/Content/Match/Setup.less
+++ b/src/GosuArena/GosuArena/Content/Match/Setup.less
@@ -1,4 +1,4 @@
-﻿@import "../GosuArena.less";
+﻿@import "../GosuArenaVariables.less";
 
 ul#bots {
     margin: 20px 0;
@@ -27,9 +27,6 @@ ul#bots {
 }
 
 #play-button {
-    .btn;
-    .btn-primary;
-    .btn-lg;
-
     float: right;
+    min-width: 150px;
 }
