--- a/src/GosuArena/GosuArena/Views/Account/ChangePasswordSuccess.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/ChangePasswordSuccess.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
+
+@{
     ViewBag.Title = "Change Password";
 }
 
