--- a/src/GosuArena/GosuArena/Views/Account/Login.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Login.cshtml
@@ -1,5 +1,9 @@
 ﻿@model GosuArena.Models.Account.LogOnModel
 
+@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
+
 @{
     ViewBag.Title = "Log On";
 }
