--- a/src/GosuArena/GosuArena/Views/Bot/Create.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿@model GosuArena.Entities.Bot
 
+@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
 
 @using (Html.BeginForm())
 {
