--- a/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
@@ -25,7 +25,7 @@
 
 <form method="GET" action="@Url.Action("Play", "Match")" target="@Model.Target">
     <input type="hidden" name="names" id="names" />
-    <button type="submit" id="play-button">Play!</button>
+    <button type="submit" id="play-button" class="btn btn-lg btn-primary">Play!</button>
 </form>
 
 <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Setup.js")"></script>
