--- a/src/GosuArena/GosuArena/Views/Account/ChangePassword.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/ChangePassword.cshtml
@@ -1,5 +1,9 @@
 ﻿@model GosuArena.Models.Account.ChangePasswordModel
 
+@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
+
 @{
     ViewBag.Title = "Change Password";
 }
