--- a/src/GosuArena/GosuArena/Views/Account/Register.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Register.cshtml
@@ -1,5 +1,9 @@
 ﻿@model GosuArena.Models.Account.RegisterModel
 
+@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
+
 @{
     ViewBag.Title = "Register";
 }
