--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -1,4 +1,5 @@
-﻿@model IList<GosuArena.Entities.Bot>
+﻿@using System.Web.Optimization
+@model IList<GosuArena.Entities.Bot>
 
 @{
     ViewBag.Title = "Play match!";
@@ -28,8 +29,8 @@
 
 <ul id="botLegends"></ul>
 
-
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/math.js")"> </script>
+@Scripts.Render("~/bundles/gosuarena")
+@*<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/math.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/point.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/vector.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/line.js")"> </script>
@@ -49,7 +50,7 @@
 <script type="text/javascript" src="@Url.Content("~/Scripts/gameClock.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/engine.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/settings.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/legend.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/legend.js")"> </script>*@
 
 @foreach (var bot in Model)
 {
