--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using GosuArena.Extensions
+﻿@using System.Web.Optimization
+@using GosuArena.Extensions
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,8 +7,9 @@
         <title>@ViewBag.Title</title>
 
         @RenderSection("styles", required: false)
-
-        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery-2.0.0.js")"> </script>
+        
+        @Scripts.Render("~/bundles/jquery")
+        @*<script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery-2.0.0.js")"> </script>*@
     </head>
     <body>
         <div class="container">
@@ -46,9 +48,10 @@
                 </menu>
             </div>
         </div>
-        
-        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.js")"> </script>
-        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.unobtrusive.js")"> </script>
+       
+        @Scripts.Render("~/bundles/jqueryvalidation") 
+        @*<script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.js")"> </script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.unobtrusive.js")"> </script>*@
         <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/confirmation.js")"> </script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/changetracking.js")"> </script>
     
