Changed script structure to enable wildcards to be used when creating script bundles for the game scripts

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -72,4 +72,4 @@
     </script>
 }
 
-<script type="text/javascript" src="@Url.Content("~/Scripts/match.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/match.js")"> </script>
