Added support for settings the isTraining variable from the query string, so that the game can easily be switched from training to non-training

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/Match/Play.less")" />
 }
 
+@section scripts {
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/match.js")"> </script>
+}
+
 <div id="playing-field">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 
@@ -31,27 +35,6 @@
 <ul id="botLegends"></ul>
 
 @Scripts.Render("~/bundles/gosuarena")
-@*<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/math.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/point.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/vector.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/line.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/rectangle.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/snapshot.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/eventAggregator.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/rectangleCache.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/events.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/bot.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/bullet.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/botOptions.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/collisionDetector.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/actionQueue.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/userActionQueue.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gameVisualizer.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/arenaState.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/gameClock.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/engine.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/settings.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/legend.js")"> </script>*@
 
 @foreach (var bot in Model.Where(x => !string.IsNullOrWhiteSpace(x.Script)))
 {
@@ -83,5 +66,3 @@
         });
     </script>
 }
-
-<script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/match.js")"> </script>
