--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -40,6 +40,7 @@
         Title = "Play training match",
         Bots = ViewBag.TrainingBots,
         PreselectedBots = Model.AsList(),
-        ShouldOpenNewTab = true
+        ShouldOpenNewTab = true,
+        IsTraining = true
     })
 </aside>
