Redefined jQuery and XMLHttpRequest to avoid ajax requests from the bots

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -46,8 +46,10 @@
             // Redefine globals
             var window = {};
             var document = {};
-            var alert = function() {
-            };
+            var alert = function() { };
+            var XMLHttpRequest = function() { };
+            var jQuery = function () { };
+            var $ = function () { };
 
             // User written code starts here:
             
