--- a/src/GosuArena/GosuArena/Views/Account/ChangePassword.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/ChangePassword.cshtml
@@ -18,6 +18,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
+    
     @Html.ValidationSummary(true, "Password change was unsuccessful. Please correct the errors and try again.")
  
     <fieldset>
