--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -12,6 +12,9 @@
 }
 
 @section scripts {
+    <script type="text/javascript" src="@Url.Content("~/Scripts/lib/knockout/knockout-3.0.0.js")"> </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/matchViewModel.js")"> </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/legend.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/match.js")"> </script>
 }
 
@@ -32,7 +35,12 @@
     </menu>
 </div>
 
-<ul id="botLegends"></ul>
+<ul id="botLegends" data-bind="foreach: botLegends">
+    <li>
+        <div class="color" data-bind='style: { "background-color" : color }'></div>
+        <span class="name" data-bind="text: name"></span>
+    </li>
+</ul>
 
 @Scripts.Render("~/bundles/gosuarena")
 
