--- a/src/GosuArena/GosuArena/Content/Match/Play.less
+++ b/src/GosuArena/GosuArena/Content/Match/Play.less
@@ -25,6 +25,11 @@
         display: block;
         vertical-align: top;
         font-size: 12px;
+
+        .killed {
+            text-decoration: line-through;
+            color: #cecece;
+        }
     }
 }
 
