--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -13,6 +13,7 @@
 
 @section scripts {
     <script type="text/javascript" src="@Url.Content("~/Scripts/lib/knockout/knockout-3.0.0.js")"> </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/botViewModel.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/matchViewModel.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/match.js")"> </script>
 }
@@ -37,7 +38,7 @@
 <ul id="botLegends" data-bind="foreach: botLegends">
     <li>
         <div class="color" data-bind='style: { "background-color" : color }'></div>
-        <span class="name" data-bind="text: name"></span>
+        <span class="name" data-bind="text: name, css: { killed: !isAlive() }"></span>
     </li>
 </ul>
 
