--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -9,7 +9,6 @@
         @RenderSection("styles", required: false)
         
         @Scripts.Render("~/bundles/jquery")
-        @*<script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery-2.0.0.js")"> </script>*@
     </head>
     <body>
         <div class="container">
@@ -49,6 +48,7 @@
             </div>
         </div>
        
+         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/underscore-min.js")"> </script>
         @Scripts.Render("~/bundles/jqueryvalidation") 
         @*<script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.js")"> </script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.unobtrusive.js")"> </script>*@
