Fixed styling of the training match setup on the edit page to work with the new implementation of the setup view and scripts

--- a/src/GosuArena/GosuArena/Content/Bot/Edit.less
+++ b/src/GosuArena/GosuArena/Content/Bot/Edit.less
@@ -1,4 +1,4 @@
-﻿@import "../GosuArena.less";
+﻿@import "../Match/SetupTrainingMatch.less";
 
 legend {
     display: none;
@@ -10,9 +10,6 @@ label[for=Script] {
 
 textarea {
     display: block;
-    /*width: 100%;
-    min-height: 600px;
-    height: 90%;*/
 }
 
 form {
@@ -30,7 +27,8 @@ body {
     div.container {
         position: relative;
     }
-    section {
+
+    #page-container {
         position: absolute;
         top: 50px;
         bottom: 0;
