--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -15,7 +15,11 @@
     <script type="text/javascript" src="@Url.Content("~/Content/codemirror-3.20/lib/codemirror-compressed.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Bot/Edit.js")"></script>
 
+    <script type="text/javascript" src="@Url.Content("~/Scripts/lib/knockout/knockout-3.0.0.js")"> </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Setup/setupViewModel.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Setup/botSelectionViewModel.js")"></script>
 }
+
 
 @Html.ValidationSummary(true, "The bot could not be created")
 
