--- a/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
@@ -1,37 +1,55 @@
 ﻿@model GosuArena.Models.Controls.MatchSetupModel
 
-<link rel="stylesheet" href="@Url.Content("~/Content/Match/Setup.less")" />
-
 <h2>@Model.Title</h2>
 
-<ul id="bots">
-    @foreach (var bot in Model.SelectableBots)
-    {
-        <li class="bot well" data-id="@bot.Id" data-bot-name="@bot.Name">
-            <span class="name">@bot.Name</span>
 
-            @if (bot.IsWrittenByUser)
-            {
-                <span class="author">by @bot.AuthorUsername</span>
-            }
+<section id="bot-lists-container">
+    <ul id="bots" data-bind="foreach: visibleBots">
+        <li class="bot well" data-bind="click: $parent.toggleSelection, css: { selected: isSelected }">
+            <span class="name" data-bind="text: name"></span>
+            <span class="author" data-bind="text: authorDescription"></span>
         </li>
-    }
-    
-    @for (var i = 0; i < Model.PreselectedBots.Count; i++)
-    {
-        <li class="preselected-bot" data-bot-name="@Model.PreselectedBots[i].Name">@Model.PreselectedBots[i].Name</li>
-    }
-</ul>
+    </ul>
 
-<form method="GET" action="@Url.Action("Play", "Match")" target="@Model.Target">
-    <input type="hidden" name="names" id="names" />
-    
+    <div id="selected-bots-container">
+        <span class="no-selection-message well" data-bind="visible: isSelectionEmpty()">No bots have been selected</span>
+        <ul id="selected-bots" data-bind="foreach: selectedBots">
+            <li class="bot well" data-bind="click: $parent.toggleSelection">
+                <span class="name" data-bind="text: name"></span>
+                <span class="author" data-bind="text: authorDescription"></span>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<form id="start-match" method="GET" action="@Url.Action("Play", "Match")" target="@Model.Target">
+    <input type="hidden" name="names" id="names" data-bind="value: selectedBotNames" />
+
     @if (Model.IsTraining)
     {
-        <input type="hidden" name="training" value="@Model.IsTraining.ToString().ToLower()"/>
+        <input type="hidden" name="training" value="@Model.IsTraining.ToString().ToLower()" />
     }
-    
+
     <button type="submit" id="play-button" class="btn btn-lg btn-primary">Play!</button>
 </form>
 
-<script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Setup/Setup.js")"></script>
+<script type="text/javascript">
+    $(function() {
+        var bots = [
+            @foreach(var bot in Model.SelectableBots)
+            {
+                @:{ id: @bot.Id, name: '@bot.Name', authorUsername: '@bot.AuthorUsername' },
+            }
+        ];
+
+        var preselectedBots = [
+            @foreach(var bot in Model.PreselectedBots)
+            {
+                @:{ id: @bot.Id, name: '@bot.Name', authorUsername: '@bot.AuthorUsername' },
+            }
+        ];
+
+        var setupViewModel = gosuArena.factories.createSetupViewModel(bots, preselectedBots);
+        ko.applyBindings(setupViewModel);
+    });
+</script>
