Fixed bug with bot legends not showing colors in firefox

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -37,7 +37,7 @@
 
 <ul id="botLegends" data-bind="foreach: botLegends">
     <li>
-        <div class="color" data-bind='style: { "background-color" : color }'></div>
+        <div class="color" data-bind='style: { backgroundColor : color }'></div>
         <span class="name" data-bind="text: name, css: { killed: !isAlive() }"></span>
     </li>
 </ul>
