--- a/src/GosuArena/GosuArena/Content/Match/SetupMatch.less
+++ b/src/GosuArena/GosuArena/Content/Match/SetupMatch.less
@@ -4,13 +4,14 @@
     .make-md-column(5);
 }
 
-ul#bots {
+#available-bots-container {
     .make-md-column(7);
-    padding-right: 10px;
 
     .selected {
         display: none;
     }
+    
+    padding-right: 10px;
 }
 
 .no-selection-message {
