--- a/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/MatchSetup.cshtml
@@ -4,12 +4,15 @@
 
 
 <section id="bot-lists-container">
-    <ul id="bots" data-bind="foreach: visibleBots">
-        <li class="bot well" data-bind="click: $parent.toggleSelection, css: { selected: isSelected }">
-            <span class="name" data-bind="text: name"></span>
-            <span class="author" data-bind="text: authorDescription"></span>
-        </li>
-    </ul>
+    <div id="available-bots-container">
+        <ul id="bots" data-bind="foreach: visibleBots">
+            <li class="bot well" data-bind="click: $parent.toggleSelection, css: { selected: isSelected }">
+                <span class="name" data-bind="text: name"></span>
+                <span class="author" data-bind="text: authorDescription"></span>
+            </li>
+        </ul>
+        <span id="result-filtered-message" data-bind="visible: isResultLimited()">Result has been limited due to too many matches</span>
+    </div>
 
     <div id="selected-bots-container">
         <span class="no-selection-message well" data-bind="visible: isSelectionEmpty()">No bots have been selected</span>
@@ -36,14 +39,14 @@
 <script type="text/javascript">
     $(function() {
         var bots = [
-            @foreach(var bot in Model.SelectableBots)
+            @foreach (var bot in Model.SelectableBots)
             {
                 @:{ id: @bot.Id, name: '@bot.Name', authorUsername: '@bot.AuthorUsername' },
             }
         ];
 
         var preselectedBots = [
-            @foreach(var bot in Model.PreselectedBots)
+            @foreach (var bot in Model.PreselectedBots)
             {
                 @:{ id: @bot.Id, name: '@bot.Name', authorUsername: '@bot.AuthorUsername' },
             }
