Fixed bug where remember me did not work in the log in process

--- a/src/GosuArena/GosuArena/Views/Account/Login.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Login.cshtml
@@ -30,7 +30,8 @@
 
             <div>
                 <label>
-                    <input type="checkbox" name="RememberMe"> Remember me
+                    @Html.CheckBoxFor(x => x.RememberMe)
+                     Remember me
                 </label>
             </div>
 
